result grid table

--- a/public/style.css
+++ b/public/style.css
@@ -67,15 +67,27 @@ section.developers {
   margin-top: 3em;
   border-top: 1px solid #dddddd;
 }
+a {
+  background: #f6f8fa;
+  color: #5b6f82;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+
+}
+
+a:link:hover{
+  text-decoration: underline;
+}
+
 h1 {
   font-size: 32px;
   line-height: 32px;
-  letter-spacing: -0.1px;
   clear: both;
   color: #81c14b;
   text-align: center;
-  font-weight: 500;
-  margin-bottom: 0.75em;
+  font-style: italic;
 }
 h2 {
   font-size: 36px;
@@ -131,8 +143,8 @@ p {
 }
 
 .status {
-  padding: 10px 0;
-  margin: 10px 0;
+  padding: 0px 0;
+  margin: 0px 0;
   min-height: 45px;
 }
 
@@ -140,7 +152,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 320px;
+  width: 300px;
   text-align: center;
   background: #81c14b;
   /* text-transform: uppercase; */
