no zoom when button pressed

--- a/public/style.css
+++ b/public/style.css
@@ -162,6 +162,7 @@ p {
   border-radius: 5px;
   border: none;
   outline: none;
+  touch-action: manipulation;
 }
 .button:disabled {
   pointer-events: none;
